ATLAS-1499: fix scenario 13 and 14